--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -231,9 +231,10 @@
 
     .sc-starburst {
       position: absolute;
-      top: -6px;
-      right: -6px;
+      top: -14px;
+      right: -14px;
       pointer-events: none;
+      z-index: 2;
     }
   }
 
